added list tracker

--- a/templates/app.html
+++ b/templates/app.html
@@ -25,7 +25,8 @@
         <div id="controls">
             <form class="form-inline" action="#" role="form">
             <div class="ui-widget"><input class="form-control" id="search_input"/><button type="submit" id="search_btn" class="btn btn-primary">Search</button></div>
-                </form><br>
+            </form>
+            <br>
             <button id="remove_movies_btn" class="btn btn-warning"><i class="icon-remove icon-white"></i>Remove all</button>
             <div id="movies_container"><ul></ul></div>
 
